[gd_scene load_steps=10 format=3 uid="uid://blbarreyjem4l"]

[ext_resource type="Texture2D" uid="uid://t5lgshoxlohe" path="res://Assets/Sprites/Items/BowserFlame.png" id="1_4hwux"]
[ext_resource type="Script" uid="uid://btstbvjk6e6aw" path="res://Scripts/Classes/Entities/Enemies/BowserFlame.gd" id="1_dq7qg"]
[ext_resource type="Script" uid="uid://caq1qiwmy0mox" path="res://Scripts/Parts/BetterAnimatedSprite.gd" id="3_ktnk0"]
[ext_resource type="Script" uid="uid://cbal8ms2oe1ik" path="res://Scripts/Classes/Components/ResourceSetterNew.gd" id="4_ktnk0"]
[ext_resource type="JSON" path="res://Assets/Sprites/Items/BowserFlame.json" id="5_0e5kh"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iikig"]
atlas = ExtResource("1_4hwux")
region = Rect2(0, 0, 24, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_jqext"]
atlas = ExtResource("1_4hwux")
region = Rect2(24, 0, 24, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_oy8b6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iikig")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jqext")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ohhuu"]
size = Vector2(12, 4)

[node name="BowserFlame" type="Node2D" groups=["Enemies"]]
script = ExtResource("1_dq7qg")

[node name="Sprite" type="AnimatedSprite2D" parent="."]
scale = Vector2(-1, 1)
sprite_frames = SubResource("SpriteFrames_oy8b6")
autoplay = "default"
frame_progress = 0.67141116
flip_h = true
script = ExtResource("3_ktnk0")
do_offset = false
metadata/_custom_type_script = "uid://caq1qiwmy0mox"

[node name="ResourceSetterNew" type="Node" parent="Sprite" node_paths=PackedStringArray("node_to_affect")]
script = ExtResource("4_ktnk0")
node_to_affect = NodePath("..")
property_name = "sprite_frames"
resource_json = ExtResource("5_0e5kh")
metadata/_custom_type_script = "uid://cbal8ms2oe1ik"

[node name="Hitbox" type="Area2D" parent="."]

[node name="Shape" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_ohhuu")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(-2.38419e-07, 0)
scale = Vector2(1.6, 1)

[connection signal="area_entered" from="Hitbox" to="." method="on_area_entered"]
[connection signal="screen_entered" from="VisibleOnScreenEnabler2D" to="." method="play_sfx"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="queue_free"]
